--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -82,8 +82,10 @@
     <string name="storage_location">Storage location</string>
     <string name="storage_automatic">Automatic</string>
     <string name="storage_choose">Choose location</string>
+    <string name="download_location">Download location</string>
     <string name="not_writable">Location not writable</string>
     <string name="remove_cache">Remove cache on player close</string>
+    <string name="download_cache">Active download directory to play offline content</string>
     <string name="hw_acceleration">Hardware acceleration</string>
     <string name="hw_automatic">Automatic</string>
     <string name="hw_full">Full</string>
@@ -213,6 +215,7 @@
     <string name="popular">POPULAR</string>
     <string name="top_rated">TOP RATED</string>
     <string name="release_date">RELEASE DATE</string>
+    <string name="release_hd_date">HD RELEASE DATE</string>
     <string name="last_updated">LAST UPDATED</string>
     <string name="year">YEAR</string>
     <string name="a_to_z">A - Z</string>
