--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -219,6 +219,8 @@
     <string name="last_updated">LAST UPDATED</string>
     <string name="year">YEAR</string>
     <string name="a_to_z">A - Z</string>
+    <string name="downloaded">DOWNLOADED</string>
+    <string name="hd" translatable="false">HD</string>
 
     <string name="trending">TRENDING</string>
     <string name="encountered_error_title">Video error encountered</string>
