- Refactor prefs:        - Delete downloand prefs        - Now Cache is in storageLocation (where are downloaded all files)
 - Option delete downloaded files full implement

--- a/base/src/main/res/values-es/strings.xml
+++ b/base/src/main/res/values-es/strings.xml
@@ -302,4 +302,6 @@
   <string name="download">Descargar</string>
   <string name="movies_error">No hay peliculas</string>
   <string name="select_video">Selecciona un video</string>
+  <string name="msg_delete_movie">Esta acción borrará la pelicula de la Base de datos</string>
+  <string name="question_delete_files">¿Quiere borrar tambíen los ficheros?</string>
 </resources>
