- Added Popcorn providers

--- a/base/src/main/res/values-es/strings.xml
+++ b/base/src/main/res/values-es/strings.xml
@@ -27,7 +27,7 @@
   <string name="search">Buscar</string>
   <string name="searching">Buscando...</string>
   <string name="no_data_found">Información no encontrada</string>
-  <string name="title_shows">Shows</string>
+  <string name="title_shows">Series</string>
   <string name="title_movies">Películas</string>
   <string name="title_anime">Anime</string>
   <string name="signature_invalid">Firma de la aplicación inválida</string>
