--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -150,7 +150,6 @@
     <string name="genre_all">All</string>
 	<string name="hardware_acceleration_error_message">An error occurred with hardware acceleration. Would you like to disable it and try again?</string>
 
-
 	<!-- Genres -->
     <string name="genre_action">Action</string>
     <string name="genre_adventure">Adventure</string>
@@ -158,22 +157,28 @@
     <string name="genre_biography">Biography</string>
     <string name="genre_comedy">Comedy</string>
     <string name="genre_crime">Crime</string>
+    <string name="genre_disaster">Disaster</string>
     <string name="genre_children">Children</string>
     <string name="genre_documentary">Documentary</string>
     <string name="genre_drama">Drama</string>
+    <string name="genre_eastern">Eastern</string>
     <string name="genre_family">Family</string>
     <string name="genre_fantasy">Fantasy</string>
+    <string name="genre_fan_film">Fan Film</string>
     <string name="genre_film_noir">Film-Noir</string>
     <string name="genre_game_show">Game Show</string>
     <string name="genre_history">History</string>
     <string name="genre_home_garden">Home and Garden</string>
+    <string name="genre_holiday">Holiday</string>
     <string name="genre_horror">Horror</string>
     <string name="genre_mini_series">Mini Series</string>
+    <string name="genre_indie">Indie</string>
     <string name="genre_music">Music</string>
     <string name="genre_musical">Musical</string>
     <string name="genre_mystery">Mystery</string>
     <string name="genre_news">News</string>
     <string name="genre_reality">Reality</string>
+    <string name="genre_road">Road</string>
     <string name="genre_romance">Romance</string>
     <string name="genre_sci_fi">Sci-Fi</string>
     <string name="genre_short">Short</string>
@@ -183,6 +188,7 @@
     <string name="genre_suspense">Suspense</string>
     <string name="genre_talk_show">Talk Show</string>
     <string name="genre_thriller">Thriller</string>
+    <string name="genre_tv_movie">TV-Movie</string>
     <string name="genre_war">War</string>
     <string name="genre_western">Western</string>
 
