--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -18,7 +18,9 @@
 
 <resources>
 
-    <string name="app_name" translatable="false">BK Theater</string>
+    <string name="app_name">BK Theater</string>
+    <string name="app_name_authority" translatable="false">BKTheater.com</string>
+    <string name="no_account_register">Failed registering Sync Account</string>
     <string name="cancel">Cancel</string>
     <string name="close">Close</string>
     <string name="ok">OK</string>
@@ -26,7 +28,7 @@
     <string name="enabled">Enabled</string>
     <string name="disabled">Disabled</string>
     <string name="update_available">New update available</string>
-    <string name="wrong_abi">Uhoh! You\'re using the wrong version of Butter for Android. The right version is being downloaded right now, if possible. If the installer is not started within a minute then your device is not supported or your internet connection is broken, which means you should try again later. If the installer fails then you must install the right version manually.</string>
+    <string name="wrong_abi">Uhoh! You\'re using the wrong version of BK Theater for Android. The right version is being downloaded right now, if possible. If the installer is not started within a minute then your device is not supported or your internet connection is broken, which means you should try again later. If the installer fails then you must install the right version manually.</string>
     <string name="press_install">Press to install</string>
 	<string name="movies_error">No movies found</string>
     <string name="loading_data">Loading data…</string>
@@ -39,6 +41,7 @@
     <string name="unknown_error">Something went wrong</string>
     <string name="torrent_failed">Failed to retrieve torrent</string>
     <string name="running">Running in background</string>
+    <string name="offlineServiceRunning">Offline service running</string>
     <string name="tap_to_close">Tap to close</string>
     <string name="tap_to_resume">Tap to resume</string>
     <string name="stop">Stop</string>
@@ -249,15 +252,15 @@
     <string name="open_with">Open with</string>
 <string name="select_file">Select file</string>
     <string name="terms" translatable="false">Your Acceptance\n\n
-By using the \'BUTTER\' app you signify your agreement to (1) these terms and conditions (the \'Terms of Service\').\n\n
+By using the \'BK Theater\' app you signify your agreement to (1) these terms and conditions (the \'Terms of Service\').\n\n
 Privacy Policy\n\n
-You understand that by using \'BUTTER\' you may encounter material that you may deem to be offensive, indecent, or objectionable, and that such content may or may not be identified as having explicit material. \'BUTTER\' will have no liability to you for such material – you agree that your use of \'BUTTER\' is at your sole risk.\n\n
+You understand that by using \'BK Theater\' you may encounter material that you may deem to be offensive, indecent, or objectionable, and that such content may or may not be identified as having explicit material. \'BK Theater\' will have no liability to you for such material – you agree that your use of \'BK Theater\' is at your sole risk.\n\n
 DISCLAIMERS\n\n
-YOU EXPRESSLY AGREE THAT YOUR USE OF \'BUTTER\' IS AT YOUR SOLE RISK. \'BUTTER\' AND ALL PRODUCTS ARE PROVIDED TO YOU \'AS IS\' WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED. \'BUTTER\' MAKES ABSOLUTELY NO WARRANTIES WHATSOEVER, EXPRESS OR IMPLIED. TO THE FULLEST EXTENT POSSIBLE UNDER APPLICABLE LAWS, YIFY DISCLAIMS ALL WARRANTIES, EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, NON-INFRINGEMENT, OR OTHER VIOLATIONS OF RIGHTS.\n\n
+YOU EXPRESSLY AGREE THAT YOUR USE OF \'BK Theater\' IS AT YOUR SOLE RISK. \'BK Theater\' AND ALL PRODUCTS ARE PROVIDED TO YOU \'AS IS\' WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED. \'BK Theater\' MAKES ABSOLUTELY NO WARRANTIES WHATSOEVER, EXPRESS OR IMPLIED. TO THE FULLEST EXTENT POSSIBLE UNDER APPLICABLE LAWS, YIFY DISCLAIMS ALL WARRANTIES, EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, NON-INFRINGEMENT, OR OTHER VIOLATIONS OF RIGHTS.\n\n
 LIMITATION OF LIABILITY\n\n
-\'BUTTER\' IS NOT RESPONSIBLE FOR ANY PROBLEMS OR TECHNICAL MALFUNCTION OF ANY WEBSITE, NETWORK, COMPUTER SYSTEMS, SERVERS, PROVIDERS, COMPUTER EQUIPMENT, OR SOFTWARE, OR FOR ANY FAILURE DUE TO TECHNICAL PROBLEMS OR TRAFFIC CONGESTION ON THE INTERNET OR \'BUTTER\' OR COMBINATION THEREOF, INCLUDING ANY INJURY OR DAMAGE TO USERS OR TO ANY COMPUTER OR OTHER DEVICE ON OR THROUGH WHICH \'BUTTER\' IS PROVIDED. UNDER NO CIRCUMSTANCES WILL \'BUTTER\' BE LIABLE FOR ANY LOSS OR DAMAGE, INCLUDING PERSONAL INJURY OR DEATH, RESULTING FROM YOUR USE OF \'BUTTER\'.\n\nSOURCE MATERIAL\n\nALL MOVIES ARE NOT HOSTED IN ANY SERVER AND ARE STREAMED USING THE P2P BIT TORRENT PROTOCOL. ALL MOVIES ARE PULLED IN FROM THE OPEN PUBLIC APIS. BY WATCHING A MOVIE WITH THIS APPLICATION YOU MIGHT BE COMMITING COPYRIGHT VIOLATIONS DEPENDING ON YOUR COUNTRY\'S LAWS. WE DO NOT TAKE ANY RESPONSABILITIES.\n\n
+\'BK Theater\' IS NOT RESPONSIBLE FOR ANY PROBLEMS OR TECHNICAL MALFUNCTION OF ANY WEBSITE, NETWORK, COMPUTER SYSTEMS, SERVERS, PROVIDERS, COMPUTER EQUIPMENT, OR SOFTWARE, OR FOR ANY FAILURE DUE TO TECHNICAL PROBLEMS OR TRAFFIC CONGESTION ON THE INTERNET OR \'BK Theater\' OR COMBINATION THEREOF, INCLUDING ANY INJURY OR DAMAGE TO USERS OR TO ANY COMPUTER OR OTHER DEVICE ON OR THROUGH WHICH \'BK Theater\' IS PROVIDED. UNDER NO CIRCUMSTANCES WILL \'BK Theater\' BE LIABLE FOR ANY LOSS OR DAMAGE, INCLUDING PERSONAL INJURY OR DEATH, RESULTING FROM YOUR USE OF \'BK Theater\'.\n\nSOURCE MATERIAL\n\nALL MOVIES ARE NOT HOSTED IN ANY SERVER AND ARE STREAMED USING THE P2P BIT TORRENT PROTOCOL. ALL MOVIES ARE PULLED IN FROM THE OPEN PUBLIC APIS. BY WATCHING A MOVIE WITH THIS APPLICATION YOU MIGHT BE COMMITING COPYRIGHT VIOLATIONS DEPENDING ON YOUR COUNTRY\'S LAWS. WE DO NOT TAKE ANY RESPONSABILITIES.\n\n
 Ability to Accept Terms of Service\n\n
-By using \'BUTTER\' or accessing this site you affirm that you are either more than 18 years of age, or an emancipated minor, or possess legal parental or guardian consent, and are fully able and competent to enter into the terms, conditions, obligations, affirmations, representations, and warranties set forth in these Terms of Service, and to abide by and comply with these Terms of Service. In any case, you affirm that you are over the age of 13, as the Service is not intended for children under 13. If you are under 13 years of age, then please do not use the Service. There are lots of other great web sites for you. Talk to your parents about what sites are appropriate for you.</string>
+By using \'BK Theater\' or accessing this site you affirm that you are either more than 18 years of age, or an emancipated minor, or possess legal parental or guardian consent, and are fully able and competent to enter into the terms, conditions, obligations, affirmations, representations, and warranties set forth in these Terms of Service, and to abide by and comply with these Terms of Service. In any case, you affirm that you are over the age of 13, as the Service is not intended for children under 13. If you are under 13 years of age, then please do not use the Service. There are lots of other great web sites for you. Talk to your parents about what sites are appropriate for you.</string>
     <string name="accept">Accept</string>
     <string name="leave">Leave</string>
 
@@ -298,7 +301,7 @@ By using \'BUTTER\' or accessing this site you affirm that you are either more t
     <string name="vpn">VPN</string>
 
     <!-- AboutFragment -->
-    <string name="about_message">Butter is the result of many developers and designers putting a bunch of APIs together to make the
+    <string name="about_message">BK Theater is the result of many developers and designers putting a bunch of APIs together to make the
 		experience of streaming torrents as simple as possible.\n\nWe are an open source project. We are from all over the world.</string>
     <string name="website">Website</string>
     <string name="forum">Forum</string>
@@ -362,7 +365,7 @@ By using \'BUTTER\' or accessing this site you affirm that you are either more t
     <!-- PTVUpdateFragment -->
     <string name="now">Yes</string>
     <string name="later">No, later</string>
-    <string name="new_update">A new version of Butter for Android TV is available. Do you want to update now?</string>
+    <string name="new_update">A new version of BK Theater for Android TV is available. Do you want to update now?</string>
 
     <string name="network_message">Check your internet connection</string>
 
